left-aligning <li> within #search-form to fix bug with fallback Bootstrap typeahead menu being center-aligned instead of left-aligned, at least as tested on Chrome

--- a/templates/static/assets/css/plumage.css
+++ b/templates/static/assets/css/plumage.css
@@ -26,6 +26,7 @@
 #index-page #browse li small { color: #999; font-size: 90% }
 
 #index-page #search-form { margin: 3.5em auto; text-align: center; max-width: 625px; padding: 1.75em; background-color: #e0e0e0; -webkit-border-radius: 12px; -moz-border-radius: 12px; border-radius: 12px; -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; }
+#index-page #search-form li { text-align: left }
 
 #index-page #search { font-size: 200%; min-height: 1.5em }
 
